--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
@@ -34,27 +34,24 @@
   -->
 
 <?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.Cursor?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1700.0" stylesheets="@css/MainView.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.MainViewController">
    <children>
-      <HBox alignment="CENTER_LEFT" prefHeight="96.0" prefWidth="200.0" style="-fx-background-color: #191970">
+      <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="200.0" style="-fx-background-color: #191970">
          <children>
-            <Button layoutX="18.0" layoutY="26.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0" onAction="#sideAction">
-                <graphic>
-                    <ImageView pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/align-justify.svg.png" />
-                        </image>
-                    </ImageView>
-                </graphic>
+            <Button fx:id="connectButton" mnemonicParsing="false" prefHeight="56.0" prefWidth="56.0" onAction="#connectAction">
                <HBox.margin>
-                  <Insets left="16.0" />
+                  <Insets left="4.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="connectButton" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0" onAction="#connectAction">
-               <HBox.margin>
-                  <Insets left="16.0" />
-               </HBox.margin>
-            </Button>
+             <Label fx:id="systemLbl" onMouseClicked="#systemLabelAction" alignment="CENTER" disable="true" prefHeight="24.0" prefWidth="200.0" style="-fx-border-color: black; -fx-background-color: #c6c6c6; -fx-text-fill: #1a1a1a;" text="---" >
+                 <cursor>
+                     <Cursor fx:constant="HAND" />
+                 </cursor>
+                 <HBox.margin>
+                     <Insets left="8.0" />
+                 </HBox.margin>
+             </Label>
             <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
             <ImageView fitHeight="64.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
                 <image>
@@ -64,7 +61,7 @@
                   <Insets right="8.0" />
                </HBox.margin>
             </ImageView>
-            <Button fx:id="infoButton" layoutX="18.0" layoutY="26.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0" onAction="#aboutAction">
+            <Button fx:id="infoButton" mnemonicParsing="false" prefHeight="56.0" prefWidth="56.0" onAction="#aboutAction">
                 <graphic>
                     <ImageView pickOnBounds="true" preserveRatio="true">
                         <image>
@@ -73,7 +70,7 @@
                     </ImageView>
                 </graphic>
                <HBox.margin>
-                  <Insets right="16.0" />
+                  <Insets right="4.0" />
                </HBox.margin>
             </Button>
          </children>
@@ -252,7 +249,6 @@
         </SplitPane>
       <ToolBar prefHeight="24.0">
          <items>
-            <Label fx:id="systemLbl" alignment="CENTER" disable="true" prefHeight="17.0" prefWidth="120.0" style="-fx-border-color: black; -fx-background-color: #c6c6c6; -fx-text-fill: #1a1a1a;" text="---" />
             <Circle fx:id="nominalCrl" fill="#003915" radius="8.0" stroke="WHITE" strokeType="INSIDE" />
 
             <Label fx:id="statusLbl" prefHeight="17.0" prefWidth="700.0" HBox.hgrow="ALWAYS">
