--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ActivitySchedulingDialog.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ActivitySchedulingDialog.fxml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Accordion?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <!--
   ~ Copyright (c)  2020 Dario Lucia (https://www.dariolucia.eu)
@@ -28,96 +26,104 @@
   ~ limitations under the License.
   -->
 
-
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.ComboBox?>
-<?import org.controlsfx.control.ToggleSwitch?>
-<VBox prefWidth="650.0" spacing="8.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ActivitySchedulingDialogController">
+<VBox spacing="8.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ActivitySchedulingDialogController">
    <children>
-      <HBox VBox.vgrow="NEVER" spacing="8.0">
+      <HBox spacing="8.0" VBox.vgrow="NEVER">
          <children>
-            <Label prefWidth="120.0" text="Source" />
-            <Label fx:id="activityLabel" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
+            <Label prefWidth="150.0" text="Scheduling Source" />
+            <TextField fx:id="sourceText" prefWidth="200.0" promptText="Scheduling source name" />
          </children>
       </HBox>
-       <HBox VBox.vgrow="NEVER" spacing="8.0">
+       <HBox spacing="8.0" VBox.vgrow="NEVER">
            <children>
-               <Label prefWidth="120.0" text="Type" />
-               <Label fx:id="typeLabel" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
-                   <font>
-                       <Font name="System Bold" size="12.0" />
-                   </font>
-               </Label>
+               <Label prefWidth="150.0" text="Resources" />
+            <TextField fx:id="resourcesText" prefWidth="200.0" promptText="Comma-separated resource names" />
            </children>
        </HBox>
-      <Label fx:id="descriptionLabel" wrapText="true" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
       <Separator prefWidth="200.0" />
-      <Accordion fx:id="accordion" VBox.vgrow="ALWAYS">
-        <panes>
-          <TitledPane animated="false" text="Arguments">
-               <content>
-                  <VBox fx:id="argumentVBox" prefHeight="200.0" prefWidth="600.0">
-                  </VBox>
-               </content>
-          </TitledPane>
-          <TitledPane animated="false" text="Properties">
-               <content>
-                   <HBox spacing="8">
-                  <TableView fx:id="propertiesTableView" editable="true" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" >
-                    <columns>
-                      <TableColumn fx:id="keyColumn" prefWidth="180.0" sortable="false" text="Key" />
-                      <TableColumn fx:id="valueColumn" prefWidth="180.0" sortable="false" text="Value" />
-                    </columns>
-                  </TableView>
-                       <VBox spacing="8">
-                           <children>
-                               <Button mnemonicParsing="false" prefWidth="18.0" prefHeight="18.0" onAction="#addPropertyClicked">
-                                   <graphic>
-                                       <ImageView pickOnBounds="true" preserveRatio="true">
-                                           <image>
-                                               <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/plus-circle.svg.png" />
-                                           </image>
-                                       </ImageView>
-                                   </graphic>
-                               </Button>
-                               <Button mnemonicParsing="false" prefWidth="18.0" prefHeight="18.0" onAction="#removePropertyClicked">
-                                   <graphic>
-                                       <ImageView pickOnBounds="true" preserveRatio="true">
-                                           <image>
-                                               <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/minus-circle.svg.png" />
-                                           </image>
-                                       </ImageView>
-                                   </graphic>
-                               </Button>
-                           </children>
-                       </VBox>
-                   </HBox>
-               </content>
-          </TitledPane>
-        </panes>
-      </Accordion>
+      <HBox fillHeight="false" spacing="8.0">
+         <children>
+            <RadioButton fx:id="absoluteTimeRadio" mnemonicParsing="false" prefWidth="150.0" selected="true" text="Absolute Time">
+               <toggleGroup>
+                  <ToggleGroup fx:id="triggerToggle" />
+               </toggleGroup></RadioButton>
+            <HBox HBox.hgrow="ALWAYS">
+               <children>
+                  <DatePicker fx:id="absoluteDatePicker" prefWidth="200.0">
+                     <HBox.margin>
+                        <Insets right="8.0" />
+                     </HBox.margin>
+                  </DatePicker>
+                  <TextField fx:id="absoluteTimeText" prefWidth="100.0" promptText="HH:MM:SS" />
+               </children></HBox>
+         </children>
+      </HBox>
       <Separator prefWidth="200.0" />
-       <HBox VBox.vgrow="NEVER" spacing="8">
-           <children>
-               <Label prefWidth="120.0" text="Selected Route" />
-               <ComboBox fx:id="routeChoiceBox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
-               <Button fx:id="refreshButton" mnemonicParsing="false" prefWidth="18.0" prefHeight="18.0" onAction="#refreshRouteClicked">
-                   <graphic>
-                       <ImageView pickOnBounds="true" preserveRatio="true">
-                           <image>
-                               <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/refresh.svg.png" />
-                           </image>
-                       </ImageView>
-                   </graphic>
-               </Button>
-               <ToggleSwitch fx:id="forceToggleSwitch" text="Force" />
-           </children>
-       </HBox>
+      <HBox fillHeight="false" spacing="8.0">
+         <children>
+            <RadioButton fx:id="relativeTimeRadio" mnemonicParsing="false" prefWidth="150.0" text="Relative Time" toggleGroup="$triggerToggle" />
+            <VBox HBox.hgrow="ALWAYS">
+               <children>
+                  <HBox>
+                     <children>
+                        <TextField fx:id="relativeTimeText" prefWidth="200.0">
+                           <HBox.margin>
+                              <Insets right="8.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Label text="Relative Time Delay (seconds)" />
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="4.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <TextField fx:id="externalIdText" prefWidth="200.0">
+                           <HBox.margin>
+                              <Insets right="8.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Label text="External Task ID" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+      <Separator prefWidth="200.0" />
+      <HBox spacing="8.0">
+         <children>
+            <RadioButton fx:id="eventDrivenRadio" mnemonicParsing="false" prefWidth="150.0" text="Event-Driven" toggleGroup="$triggerToggle" />
+            <VBox HBox.hgrow="ALWAYS">
+               <children>
+                  <HBox>
+                     <children>
+                        <TextField fx:id="eventPathText" prefWidth="200.0">
+                           <HBox.margin>
+                              <Insets right="8.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Label text="Event Path" />
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="4.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <TextField fx:id="protectionTimeText" prefWidth="200.0">
+                           <HBox.margin>
+                              <Insets right="8.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Label text="Protection Time (seconds)" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
