Update to the event based task Update to the test driver

--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ModelBrowserView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ModelBrowserView.fxml
@@ -109,6 +109,16 @@
                                     </ImageView>
                                 </graphic>
                             </MenuItem>
+                            <SeparatorMenuItem />
+                            <MenuItem mnemonicParsing="false" onAction="#copyPathToClipboardItemAction" text="Copy path to clipboard" >
+                                <graphic>
+                                    <ImageView pickOnBounds="true" preserveRatio="true">
+                                        <image>
+                                            <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/files.svg.png" />
+                                        </image>
+                                    </ImageView>
+                                </graphic>
+                            </MenuItem>
                         </items>
                     </ContextMenu>
               </contextMenu>
