--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
@@ -100,6 +100,7 @@
                                              </ImageView>
                                          </graphic>
                                         <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/ParameterDisplayView.fxml"
+                                                    viewImage="/eu/dariolucia/reatmetric/ui/fxml/images/16px/ghost-org-square.svg.png"
                                                     viewName="Monitoring AND"/>
                                      </Button>
                                      <Button text="Parameter View" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
@@ -117,6 +118,7 @@
                                          </graphic>
                                          <properties
                                                  viewLocation="/eu/dariolucia/reatmetric/ui/fxml/ParameterDataLogView.fxml"
+                                                 viewImage="/eu/dariolucia/reatmetric/ui/fxml/images/16px/ordered-list.svg.png"
                                                  viewName="Parameter View"/>
                                      </Button>
                                      <Button text="Event View" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
@@ -133,6 +135,7 @@
                                              </ImageView>
                                          </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/EventDataView.fxml"
+                                                     viewImage="/eu/dariolucia/reatmetric/ui/fxml/images/16px/thunder.svg.png"
                                                      viewName="Event View"/>
                                      </Button>
                                      <Button text="Activity Verification View" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
@@ -149,6 +152,7 @@
                                              </ImageView>
                                          </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/ActivityDataView.fxml"
+                                                     viewImage="/eu/dariolucia/reatmetric/ui/fxml/images/16px/cogs.svg.png"
                                                      viewName="Activity Verification View"/>
                                      </Button>
                                      <Button text="Alarm View" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
@@ -165,6 +169,7 @@
                                              </ImageView>
                                          </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/AlarmParameterDataView.fxml"
+                                                     viewImage="/eu/dariolucia/reatmetric/ui/fxml/images/16px/alert.svg.png"
                                                      viewName="Alarm View"/>
                                      </Button>
                                      <Button text="Raw Data Inspector" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
@@ -181,6 +186,7 @@
                                              </ImageView>
                                          </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/RawDataView.fxml"
+                                                     viewImage="/eu/dariolucia/reatmetric/ui/fxml/images/16px/search-folder.svg.png"
                                                      viewName="Raw Data Inspector"/>
                                      </Button>
                                      <Button text="Charts" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
@@ -197,6 +203,7 @@
                                              </ImageView>
                                          </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/UserDisplayView.fxml"
+                                                     viewImage="/eu/dariolucia/reatmetric/ui/fxml/images/16px/signal.svg.png"
                                                      viewName="Charts"/>
                                      </Button>
                                      <Button text="Mimics" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
@@ -213,6 +220,7 @@
                                              </ImageView>
                                          </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/MimicsDisplayView.fxml"
+                                                     viewImage="/eu/dariolucia/reatmetric/ui/fxml/images/16px/sitemap.svg.png"
                                                      viewName="Mimics"/>
                                      </Button>
                                      <Button text="Operational Messages" mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
@@ -229,6 +237,7 @@
                                              </ImageView>
                                          </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/OperationalMessageView.fxml"
+                                                     viewImage="/eu/dariolucia/reatmetric/ui/fxml/images/16px/messages.svg.png"
                                                      viewName="Operational Messages"/>
                                      </Button>
                                      <Button text="Scheduler" mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
@@ -245,6 +254,7 @@
                                              </ImageView>
                                          </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/SchedulerView.fxml"
+                                                     viewImage="/eu/dariolucia/reatmetric/ui/fxml/images/16px/chronometer.svg.png"
                                                      viewName="Scheduler"/>
                                      </Button>
                                  </children>
