--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
@@ -36,23 +36,16 @@
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1700.0" stylesheets="@css/MainView.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.MainViewController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="200.0" style="-fx-background-color: #191970">
          <children>
-            <Button fx:id="connectButton" mnemonicParsing="false" prefHeight="56.0" prefWidth="56.0" onAction="#connectAction">
+            <Button fx:id="connectButton" mnemonicParsing="false" prefHeight="56.0" prefWidth="64.0" onAction="#connectAction">
                <HBox.margin>
                   <Insets left="4.0" />
                </HBox.margin>
             </Button>
-             <Label fx:id="systemLbl" onMouseClicked="#systemLabelAction" alignment="CENTER" disable="true" prefHeight="24.0" prefWidth="200.0" style="-fx-border-color: black; -fx-background-color: #c6c6c6; -fx-text-fill: #1a1a1a;" text="---" >
-                 <cursor>
-                     <Cursor fx:constant="HAND" />
-                 </cursor>
-                 <HBox.margin>
-                     <Insets left="8.0" />
-                 </HBox.margin>
-             </Label>
             <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
             <ImageView fitHeight="64.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
                 <image>
@@ -62,7 +55,7 @@
                   <Insets right="8.0" />
                </HBox.margin>
             </ImageView>
-            <Button fx:id="infoButton" mnemonicParsing="false" prefHeight="56.0" prefWidth="56.0" onAction="#aboutAction">
+            <Button fx:id="infoButton" mnemonicParsing="false" prefHeight="56.0" prefWidth="64.0" onAction="#aboutAction">
                 <graphic>
                     <ImageView pickOnBounds="true" preserveRatio="true">
                         <image>
@@ -271,18 +264,49 @@
                 </TitledPane>
               </panes>
             </Accordion>
-            <TabPane fx:id="viewTabPane" prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="ALL_TABS" />
+              <AnchorPane>
+                  <children>
+                    <TabPane fx:id="viewTabPane" prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="ALL_TABS"
+                             AnchorPane.topAnchor="0.0" AnchorPane.rightAnchor="1.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" />
+                    <HBox AnchorPane.rightAnchor="2.0" AnchorPane.bottomAnchor="4.0">
+                        <children>
+                            <Button fx:id="detachButton" mnemonicParsing="false" prefHeight="16.0" prefWidth="16.0" onAction="#detachMouseClicked">
+                                <graphic>
+                                    <ImageView pickOnBounds="true" preserveRatio="true">
+                                        <image>
+                                            <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/pin.svg.png" />
+                                        </image>
+                                    </ImageView>
+                                </graphic>
+                                <tooltip>
+                                    <Tooltip text="Detach tab" />
+                                </tooltip>
+                            </Button>
+                        </children>
+                    </HBox>
+                  </children>
+              </AnchorPane>
           </items>
         </SplitPane>
       <ToolBar prefHeight="24.0">
          <items>
-            <Circle fx:id="nominalCrl" fill="#003915" radius="8.0" stroke="WHITE" strokeType="INSIDE" />
+            <Circle fx:id="nominalCrl" fill="#003915" radius="8.0" stroke="WHITE" strokeType="INSIDE" onMouseClicked="#debugAction"
+                style="-fx-cursor: hand;" />
             <Separator orientation="VERTICAL" />
-            <Label fx:id="statusLbl" prefHeight="17.0" prefWidth="700.0" HBox.hgrow="ALWAYS">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </Label>
+             <Label fx:id="systemLbl" onMouseClicked="#systemLabelAction" alignment="CENTER" disable="true" prefHeight="24.0" prefWidth="200.0" style="-fx-border-color: black; -fx-background-color: #c6c6c6; -fx-text-fill: #1a1a1a; -fx-background-radius: 5px; -fx-border-radius= 5 5 5 5;" text="---" >
+                 <cursor>
+                     <Cursor fx:constant="HAND" />
+                 </cursor>
+             </Label>
+             <Separator orientation="VERTICAL" />
+             <Label fx:id="statusLbl" prefHeight="17.0" VBox.vgrow="NEVER" HBox.hgrow="ALWAYS" text=" " prefWidth="700">
+                 <VBox.margin>
+                     <Insets left="2" top="2" bottom="2" right="2" />
+                 </VBox.margin>
+                 <font>
+                     <Font size="11.0" />
+                 </font>
+             </Label>
             <Pane prefHeight="1.0" prefWidth="24.0" HBox.hgrow="ALWAYS" />
              <Separator orientation="VERTICAL" />
              <ProgressBar fx:id="globalProgress" prefWidth="100.0" progress="0" visible="false" />
@@ -296,19 +320,6 @@
                      -fx-font-weight: bold;
                  </style>
              </Label>
-             <Separator orientation="VERTICAL" />
-             <Button fx:id="debugButton" mnemonicParsing="false" prefHeight="16.0" prefWidth="16.0" onAction="#debugAction">
-                 <graphic>
-                     <ImageView pickOnBounds="true" preserveRatio="true">
-                         <image>
-                             <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/medical.svg.png" />
-                         </image>
-                     </ImageView>
-                 </graphic>
-                 <tooltip>
-                     <Tooltip text="Debug information" />
-                 </tooltip>
-             </Button>
          </items>
       </ToolBar>
    </children>
