Mimics click handler Various fixes

--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
@@ -281,7 +281,7 @@
             <Accordion fx:id="sideAccordion" minWidth="0.0">
               <panes>
                 <TitledPane animated="false" minWidth="0.0" text="Processing Model" >
-                    <fx:include source="ModelBrowserView.fxml" />
+                    <fx:include fx:id="model" source="ModelBrowserView.fxml" />
                 </TitledPane>
                 <TitledPane animated="false" minWidth="0.0" text="Connectors" >
                     <fx:include source="ConnectorsBrowserView.fxml" />
